| Summary: | ASTERISK-22412: Memory corruption in cdr_custom.c. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2013-08-27 12:25:12 | Date Closed: | 2013-08-28 18:37:03 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | CDR/cdr_custom |
| Versions: | 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) cdr_custom.conf ( 1) valgrind_cdr.txt | |
| Description: | After starting Asterisk, create an optimizing local channel chain of 10 calling from one endpoint to another. Valgrind reports usage of uninitialized memory and a free of an unallocated pointer in cdr_custom.c.
This only seems to happen the first time and needs to have a local channel chain of about 10. Once it happens it does not happen again. | ||
| Comments: | |||